Java and CSS incorporation within html files entirely

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.button {
+html {
     background-color: #3498db;
     color: rgb(255, 255, 255);
     padding: 10px 20px;
@@ -7,7 +7,7 @@
     transition: background-color 0.3s ease;
   }
   
-  .button:hover {
+  li {
     background-color: #29b941;
   }
 
