--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,14 @@
-html {
+.box {
     background-color: #3498db;
     color: rgb(255, 255, 255);
     padding: 10px 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     transition: background-color 0.3s ease;
   }
   
   li {
-    background-color: #29b941;
+    background-color: #24abaf;
   }
 
   .box {
