--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .box {
-    background-color: #3498db;
+    background-color: #34db5e;
     color: rgb(255, 255, 255);
     padding: 10px 20px;
     border: none;
@@ -7,21 +7,26 @@
     transition: background-color 0.3s ease;
   }
   
-  index.html {
-    background-color: #24abaf;
+  li {
+    color: white;
+  }
+
+  li {
+    background-color: beige;
+    color:limegreen
   }
 
   .box {
     width: 100px;
     height: 100px;
-    background-color: rgb(255, 8, 0);
+    background-color: rgb(0, 255, 234, 0.322);
     transition: width 0.5s, height 0.5s, background-color 0.5s;
   }
   
   .box:hover {
     width: 150px;
     height: 150px;
-    background-color: rgb(234, 0, 255);
+    background-color: rgba(0, 225, 255, 0.445);
   }
 
   @keyframes slidein {
@@ -43,9 +48,39 @@
 .box {
     width: 100px;
     height: 100px;
-    background-color: rgb(251, 255, 0);
+    background-color: rgb(0, 195, 255);
   }
   
   .box.active {
     background-color: rgb(255, 0, 98);
   }  
+
+  html {
+    margin: 20px;
+  }
+  
+  body {
+    background-color: whitesmoke;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: x-large;
+  }
+
+  li {
+    color: whitesmoke;
+    font-family: 'Times New Roman', Times, serif, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.75em;
+  }
+  
+  #lazy_squirrel {
+    width: 30%;
+    border: 5px solid rgb(74, 139, 0);
+    border-radius: 10px;
+  }
+
+  h1 {
+    color:whitesmoke
+  }
+
+  ul {
+    color:beige
+  } 
